--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.doug.healthoclock">
+
+    <uses-permission
+        android:name="android.permission.RECEIVE_BOOT_COMPLETED"
+        tools:ignore="ProtectedPermissions" />
 
     <application
         android:allowBackup="true"
@@ -8,11 +13,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <meta-data
             android:name="android.app.default_searchable"
             android:value=".SearchResultActivity" />
 
-        <activity android:name=".controller.LoginAcitvity">
+        <activity android:name=".controller.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,7 +33,6 @@
             android:theme="@style/AppViews" />
         <activity
             android:name=".controller.RemediosActivity"
-            android:label="@string/title_activity_remedios"
             android:theme="@style/AppViews" />
         <activity android:name=".controller.SearchResultActivity">
             <intent-filter>
@@ -38,7 +43,17 @@
                 android:name="android.app.default_searchable"
                 android:value=".SearchResultActivity" />
         </activity>
-        <activity android:name=".controller.CadastroControleRemedio"></activity>
+        <activity
+            android:name=".controller.CadastroControleRemedio"
+            android:theme="@style/AppViews" />
+
+        <receiver android:name=".controller.BootBroadcastReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
+        <activity android:name=".controller.Background" />
     </application>
 
 </manifest>
